--- a/_posts/算法/剑指offer第二版/2023-04-17-第二部分.md
+++ b/_posts/算法/剑指offer第二版/2023-04-17-第二部分.md
@@ -1053,4 +1053,377 @@ public class Solution {
 }
 ```
 
-## 面试题51：
+## 面试题51：数组中的逆序对
+
+在归并排序的过程中计算逆序对个数
+
+```java
+public class Solution {
+
+    private long cnt = 0;
+    private int[] tmp;
+    public int InversePairs(int [] array) {
+        tmp = new int[array.length];
+        mergeSort(array, 0, array.length-1);
+        return (int)(cnt % 1000000007);
+    }
+    private void mergeSort(int[] nums, int l, int h) {
+        if (h-l<1) {
+            return;
+        }
+        int m = l + (h - l) / 2;
+        mergeSort(nums, l, m);
+        mergeSort(nums, m+1, h);
+        merge(nums, l, m, h);
+    }
+    private void merge(int[] nums, int l, int m, int h) {
+        int i = l, j = m+1, k = l;
+        while (i <= m || j <= h) {
+            if (i > m) {
+                tmp[k] = nums[j];
+                j++;
+            } else if (j > h) {
+                tmp[k] = nums[i];
+                i++;
+            } else if (nums[i] <= nums[j]) {
+                tmp[k] = nums[i];
+                i++;
+            } else {
+                tmp[k] = nums[j];
+                j++;
+                this.cnt += m - i + 1;
+            }
+            k++;
+        }
+        for (k = l; k <= h; k++) {
+            nums[k] = tmp[k];
+        }
+    }
+}
+
+```
+
+## 面试题52：两个链表的第一个公共节点
+要记得用一个cnt值记录修改次数。
+```java
+public class Solution {
+    public ListNode FindFirstCommonNode(ListNode pHead1, ListNode pHead2) {
+        if (pHead1 == null || pHead2 == null) {
+            return null;
+        }
+        ListNode p1 = pHead1;
+        ListNode p2 = pHead2;
+        int cnt = 0;
+        while (p1 != p2) {
+            if (p1.next == null) {
+                p1 = pHead2;
+                cnt++;
+            } else {
+                p1 = p1.next;
+            }
+
+            if (p2.next == null) {
+                p2 = pHead1;
+                cnt++;
+            } else {
+                p2 = p2.next;
+            }
+            if (cnt > 2) {
+                return null;
+            }
+        }
+        return p1;
+    }
+}
+
+```
+## 面试题53：在排序数组中查找数字
+
+```java
+public class Solution {
+    public int GetNumberOfK(int [] array , int k) {
+        if (array.length == 0) {
+            return 0;
+        }
+        int firstKIndex = getFirstK(array, 0, array.length -1, k);
+        int lastKIndex = getLastK(array, 0, array.length-1,k);
+        if (firstKIndex > -1 && lastKIndex > -1) {
+            return lastKIndex - firstKIndex + 1;
+        } else {
+            return 0;
+        }
+       
+    }
+    //找到k第一次出现时的下标
+    private int getFirstK(int[] array, int l, int h, int k) {
+        if (h < l) {
+            return -1;
+        }
+        int mid = l + (h-l)/2;
+        if (array[mid] == k) {
+            if (mid == 0 || array[mid-1] != k) {
+                return mid;
+            } else {
+                return getFirstK(array, l, mid-1, k);
+            }
+        } else if (array[mid] > k){
+            return getFirstK(array, l, mid-1, k);
+        } else {
+            return getFirstK(array, mid+1, h, k);
+        }
+    }
+
+    //找到最后一个k出现的下标
+    private int getLastK(int[] array, int l, int h, int k) {
+        if (l > h) {
+            return -1;
+        }
+        int mid = l + (h-l)/2;
+        if (array[mid] == k) {
+            if (mid == array.length - 1 || array[mid + 1] != k) {
+                return mid;
+            } else {
+                return getLastK(array, mid + 1, h, k);
+            }
+        } else if (array[mid] < k) {
+            return getLastK(array, mid + 1, h, k);
+        } else {
+            return getLastK(array, l, mid - 1, k);
+        }
+    }
+}
+```
+
+## 面试题54：二叉搜索树的第k大节点
+
+```java
+public class Solution {
+    
+     private int cnt = 0;
+     private TreeNode res = new TreeNode(-1);
+
+    public int KthNode (TreeNode proot, int k) {
+        if (proot == null || k == 0) {
+            return -1;
+        }
+        inOrder(proot, k);
+        return res.val;
+    }
+    private void inOrder(TreeNode root, int k) {
+        if (root == null || cnt >= k) {
+            return;
+        }
+        inOrder(root.left, k);
+        cnt++;
+        if (cnt == k) {
+            res = root;
+        }
+        inOrder(root.right, k);
+    }
+}
+```
+
+## 面试题55：二叉树的深度
+
+```java
+public class Solution {
+    public int TreeDepth(TreeNode root) {
+        if (root == null) {
+            return 0;
+        }
+        int left = TreeDepth(root.left);
+        int right = TreeDepth(root.right);
+        return 1 + Math.max(left, right);
+    }
+}
+```
+
+## 平衡二叉树
+
+```java
+public class 平衡二叉树 {
+
+    private boolean isBalanced = true;
+    boolean isBalanced(TreeNode root) {
+        if (root == null) {
+            return false;
+        }
+        height(root);
+        return isBalanced;
+    }
+    private int height(TreeNode root) {
+        if (root == null || !isBalanced) {
+            return 0;
+        }
+        int left = height(root.left);
+        int right = height(root.right);
+        if (Math.abs(left-right) > 1) {
+            isBalanced = false;
+        }
+        return 1 + Math.max(left, right);
+    }
+}
+```
+
+## 面试题56：数组中数字出现的次数 题目一：数组中只出现一次的两个数字
+
+将全部数字一起异或，异或结果肯定不为0，所以结果一定有一位是1，根据该位，将数组分为两部分，一部分是该位上是0的，1部分是该位上是1的，
+这样两个只出现一次的数字就被分开了，分别在两个数组中，这样问题就化简为只有一个数字出现一次，其他数字出现两次的情况。
+
+
+```java
+import java.util.*;
+
+
+public class Solution {
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     *
+     * 
+     * @param array int整型一维数组 
+     * @return int整型一维数组
+     */
+    public int[] FindNumsAppearOnce (int[] array) {
+        // write code here
+        int orRes = 0;
+        for (int num : array) {
+            orRes ^= num;
+        }
+
+        int index = findFirstBit(orRes);
+        
+        int num1 = 0, num2 = 0;
+
+        for (int i = 0; i < array.length; i++) {
+            if (isBit1(array[i], index)) {
+                num1 ^= array[i];
+            } else {
+                num2 ^= array[i];
+            }
+        }
+        int[] res = {num1, num2};
+        Arrays.sort(res);
+        return res;
+    }
+
+    private int findFirstBit(int num) {
+        //找到num的二进制表示中，从右数，首次是1的位
+        int index = 0;
+        while ((num & 1) == 0) {
+            num = num >> 1;
+            index++;
+        }
+        return index;
+    }
+    //判断num从右数第index位是不是1
+    private boolean isBit1(int num, int index) {
+        num = num >> index;
+        return (num & 1) == 1;
+    }
+}
+```
+
+## 面试题56：题目二：数组中有一个数字出现一次，其他都出现三次
+
+
+## 面试题57：和为s的数字 题目一：和为s的两个数字
+
+```java
+public class Solution {
+    public ArrayList<Integer> FindNumbersWithSum(int [] array,int sum) {
+        int left = 0;
+        int right = array.length - 1;
+        ArrayList<Integer> res = new ArrayList<>();
+        while (left < right) {
+            int tmp = array[left] + array[right];
+            if (tmp == sum) {
+                res.add(array[left]);
+                res.add(array[right]);
+                return res;
+            } else if (tmp > sum) {
+                right--;
+            } else {
+                left++;
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 面试题57：和为s的数字 题目二：和为s的连续正数序列
+
+## 面试题58：翻转字符串 题目一：翻转单词顺序
+
+
+## 面试题58：翻转字符串 题目二：左旋转字符串
+
+把前n个字符翻转到字符串的后面
+
+![img.png](../../../assets/img/img35.png)
+
+```java
+public class Solution {
+    public String LeftRotateString(String str,int n) {
+        if (str == null || str.length() == 0) {
+            return "";
+        }
+        n = n % str.length();
+        char[] chars = str.toCharArray();
+        reverse(chars, 0, n-1);
+        reverse(chars, n, str.length()-1);
+        reverse(chars, 0, str.length()-1);
+        return new String(chars);
+        
+    }
+    private void reverse(char[] chars, int i, int j) {
+        while (i < j) {
+            swap(chars, i, j);
+            i++;
+            j--;
+        }
+    }
+    private void swap(char[] chars, int i, int j) {
+        char tmp = chars[i];
+        chars[i] = chars[j];
+        chars[j] = tmp;
+    }
+}
+```
+
+## 面试题59：队列的最大值 题目一：滑动窗口的最大值
+
+```java
+public class Solution {
+    public ArrayList<Integer> maxInWindows(int [] num, int size) {
+        ArrayList<Integer> res = new ArrayList<>();
+        if (size == 0 || size > num.length) {
+            return res;
+        }
+        Queue<Integer> maxHeap = new PriorityQueue<>((o1, o2) -> (o2-o1));
+        for (int i = 0; i < size; i++) {
+            maxHeap.offer(num[i]);
+        }
+        res.add(maxHeap.peek());
+        for (int i = size; i < num.length; i++) {
+            maxHeap.remove(num[i-size]);
+            maxHeap.offer(num[i]);
+            res.add(maxHeap.peek());
+        }
+        return res;
+    }
+}
+```
+
+## 面试题59：队列的最大值 题目一：队列的最大值
+
+定义一个队列并实现函数max得到队列里的最大值。
+
+这个在java里就有线程的优先队列这种数据结构，可以直接使用。
+
+## 面试题60：n个骰子的点数
+
+
+
+
+
