--- a/_posts/算法/剑指offer第二版/2023-04-17-第二部分.md
+++ b/_posts/算法/剑指offer第二版/2023-04-17-第二部分.md
@@ -1423,7 +1423,38 @@ public class Solution {
 
 ## 面试题60：n个骰子的点数
 
+f(i,j)表示前i个骰子出现的和为j的次数。
+则f(i, j) = f(i-1, j-1) + f(i-1, j-2) + f(i-1, j-3) + f(i-1, j-4) + f(i-1, j-5) + f(i-1, j-6);
 
+n个骰子所有可能出现的值是：f(n, n), f(n, n+1),...f(n, 6*n) 
 
+```java
+class Solution {
+    public double[] dicesProbability(int n) {
+        final int face = 6;
+        final int pointNum = face * n;
+        long[][] dp = new long[n+1][pointNum+1];
 
+        for (int i = 1; i <= face; i++) {
+            dp[1][i] = 1;
+        }
+        for (int i = 2; i <= n; i++) {
+            for (int j = i; j <= i * 6; j++) { //前i个骰子，最小的总和是i，最大的总和是6*i
+                for (int k = 1; k <= face && k <= j; k++) {
+                    dp[i][j] += dp[i-1][j-k];
+                }
+            }
+        }
+
+        final double totalNum = Math.pow(6, n);
+
+        double[] res = new double[face*n - n + 1];
+
+        for (int i = n; i <= pointNum; i++) {
+            res[i-n] = dp[n][i] / totalNum;
+        }
+        return res;
+    }
+}
+```
 
