--- a/_posts/算法/剑指offer第二版/2023-04-20-第三部分.md
+++ b/_posts/算法/剑指offer第二版/2023-04-20-第三部分.md
@@ -13,3 +13,278 @@ tags:
   
 ## 面试题61：扑克牌中的顺子
 
+先找出0的个数，也就是大小王的个数，假设是cnt。然后对数组排序，从下标为cnt的数开始，统计数组中的gap的个数，要保证gap比cnt小就行。
+
+```java
+import java.util.Arrays;
+public class Solution {
+    public boolean IsContinuous(int [] numbers) {
+        //
+        if (numbers.length != 5) {
+            return false;
+        }
+        int zeroNum = 0;
+        for (int num : numbers) {
+            if (num == 0) {
+                zeroNum++;
+            }
+        }
+
+        Arrays.sort(numbers);
+
+        int p1 = zeroNum;
+        int p2 = zeroNum+1;
+        int gapNum = 0;
+        while (p2 < numbers.length) {
+            if (numbers[p1] == numbers[p2]) {
+                return false;
+            }
+            gapNum += numbers[p2] - numbers[p1] - 1;
+            p1++;
+            p2++;
+        }
+        return gapNum <= zeroNum ? true : false;
+    }
+}
+
+```
+
+## 面试题62：圆圈中最后剩下的数字
+用约瑟夫环问题的数学规律解决
+```java
+public class Solution {
+    public int LastRemaining_Solution(int n, int m) {
+        if (n== 0) {
+            return -1;
+        }
+        if (n== 1) {
+            return 0;
+        }
+        return (LastRemaining_Solution(n-1, m) + m) % n;
+    }
+}
+```
+也可以用一个队列模拟环形链表
+先把队头的数取出来，看看是不是第m个数，如果是，就丢弃，如果不是，再放到队尾。
+```java
+public class Solution {
+    public int LastRemaining_Solution(int n, int m) {
+        Queue<Integer> queue = new LinkedList<>();
+        for (int i = 0; i < n; i++) {
+            queue.add(i);
+        }
+        int cnt = 0;
+        while (queue.size() > 1) {
+            int num = queue.poll();
+            cnt++;
+            if (cnt % m == 0) {
+                
+            } else {
+                queue.add(num);
+            }
+        }
+        return queue.peek();
+    }
+}
+
+```
+
+## 面试题63：股票的最大利润
+
+```java
+public int maxProfit (int[] prices) {
+    // write code here
+    if (prices.length <= 1) {
+        return 0;
+    }
+    int preMin = prices[0];
+    int maxProfit = 0;
+    for (int i = 1; i < prices.length; i++) {
+        preMin = Math.min(preMin, prices[i]);
+        maxProfit = Math.max(maxProfit, prices[i] - preMin);
+    }
+    return maxProfit;
+}
+```
+
+用动态规划的解法：
+
+## 面试题64：求1+2+3+...+n
+
+
+当n=0的时候，递归就不会进行下去了，就会终止。所以就用这个特性代替循环。
+```java
+public class Solution {
+    public int Sum_Solution(int n) {
+        int sum = n;
+        boolean b = (n > 0) && ((sum += Sum_Solution(n-1)) > 0);
+        return sum;
+    }
+}
+```
+
+## 面试题65：不用加减乘除做加法
+
+先不进位相加两个数得到a^b,然后计算两个数相加产生的进位得到(a&b)<<1,再将这两个数相加。
+```java
+public class Solution {
+    public int Add(int num1,int num2) {
+        if (num2 == 0) {
+            return num1;
+        } else {
+            return Add(num1 ^ num2, (num1 & num2) << 1);
+        }
+    }
+}
+```
+
+## 面试题66：构建乘积数组
+
+
+```java
+public class Solution {
+    public int[] multiply(int[] A) {
+        int n = A.length;
+        int[] C = new int[n];
+        C[0] = 1;
+        for (int i = 1; i < n; i++) {
+            C[i] = C[i-1] * A[i-1];
+        }
+
+        int[] D = new int[n];
+        D[n-1] = 1;
+        for (int i = n-2; i >=0; i--) {
+            D[i] = D[i+1] * A[i+1];
+        }
+
+        int[] E = new int[n];
+        for (int i = 0; i < n; i++) {
+            E[i] = C[i] * D[i];
+        }
+        return E;
+    }
+}
+```
+
+## 面试题67：把字符串转换成整数
+
+要考虑的情况很多
+
+```java
+import java.util.*;
+
+
+public class Solution {
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     *
+     * 
+     * @param s string字符串 
+     * @return int整型
+     */
+    public int StrToInt (String s) {
+        // write code here
+        s = s.trim();
+        if (s == null || s.length() == 0) {
+            return 0;
+        }
+        
+        long res = 0;
+        boolean isNegative = (s.charAt(0) == '-') ? true : false;
+        for (int i = 0; i < s.length(); i++) {
+            char ch = s.charAt(i);
+            if ((i == 0) && (ch == '+' || ch == '-')) {
+                continue;
+            }
+            if (ch < '0' || ch > '9') {
+                return isNegative ? (int) -res : (int) res;
+            }
+            res = res * 10 + (ch - '0');
+            if (res > 0x7FFFFFFF) {
+                return isNegative ? Integer.MIN_VALUE : Integer.MAX_VALUE;
+            }
+        }
+        return isNegative ? (int)-res : (int)res;
+    }
+}
+```
+
+## 面试题68：树中两个节点的最低公共祖先
+
+书中的解法是：
+> 找到从根节点到节点1的路径，保存下来，用LinkedList保存
+> 找到从根节点到节点2的路径，保存下来
+> 问题就转化为求两条路径的最后一个公共节点
+
+```java
+import java.util.*;
+
+/*
+ * public class TreeNode {
+ *   int val = 0;
+ *   TreeNode left = null;
+ *   TreeNode right = null;
+ *   public TreeNode(int val) {
+ *     this.val = val;
+ *   }
+ * }
+ */
+
+public class Solution {
+    /**
+     * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+     *
+     * 
+     * @param root TreeNode类 
+     * @param p int整型 
+     * @param q int整型 
+     * @return int整型
+     */
+    public int lowestCommonAncestor (TreeNode root, int p, int q) {
+        // write code here
+
+        List<TreeNode> path1 = new ArrayList<>();
+        getNodePath(root, new TreeNode(p), path1);
+        
+        List<TreeNode> path2 = new ArrayList<>();
+        getNodePath(root, new TreeNode(q), path2);
+
+        return getLastCommonNode(path1, path2).val;
+    }
+
+    //找到根节点到node节点的路径
+    private boolean getNodePath(TreeNode root, TreeNode node, List<TreeNode> path) {
+        if (root == null) {
+            return false;
+        }
+        path.add(root);
+        if (root.val == node.val) {
+            return true;
+        }
+        boolean found = false;
+
+        found = getNodePath(root.left, node, path);
+        if (!found) {
+            found = getNodePath(root.right, node, path);
+        }
+        if (!found) {
+            path.remove(root);
+        }
+        return found;
+    }
+
+    private TreeNode getLastCommonNode(List<TreeNode> path1, List<TreeNode> path2) {
+        TreeNode commonNode = null;
+        Iterator<TreeNode> iterator1 = path1.iterator();
+        Iterator<TreeNode> iterator2 = path2.iterator();
+        while (iterator1.hasNext() && iterator2.hasNext()) {
+            TreeNode node1 = iterator1.next();
+            TreeNode node2 = iterator2.next();
+            if (node1.val == node2.val) {
+                commonNode = node1;
+            }
+        }
+        return commonNode;
+    }
+}
+```
