--- a/_posts/blogs/2023-04-24-理解Java8中的函数式编程.md
+++ b/_posts/blogs/2023-04-24-理解Java8中的函数式编程.md
@@ -13,10 +13,46 @@ Supplier、Predicate和Functions
 
 ## Consumer
 
+Consumer顾名思义就是一个接收一个输入，然后对这个输入执行一些操作，然后返回，就是消费者的意思。
+Consumer接口有两个方法：accept和andThen，
+accept方法接收一个对象，然后消费该对象。andThen接收的参数是另一个Consumer，表示在该消费者消费之后传给另一个消费者继续处理，用来组合使用。
+
+
+```java
+void accept(T t);
+default Consumer<T> andThen(Consumer<? super T> after);
+```
+
+下面的例子消费一个字符串然后打印该字符串，forEach方法接收一个consumer接口实现。
+```java
+@Test
+public void whenNamesPresentConsumeAll(){
+    Consumer<String> printConsumer = t -> System.out.println(t);
+    Stream<String> cities = Stream.of("Sydney", "Dhaka", "New York", "London");
+    cities.forEach(printConsumer);
+}
+```
+下面的例子是组合使用多个consumer实现来组成消费链，其中一个消费者将列表转化成大写字母，另一个负责打印字符串
+```java
+@Test
+public void whenNamesPresentUseBothConsumer(){
+    List<String> cities = Arrays.asList("Sydney", "Dhaka", "New York", "London");
+
+    Consumer<List<String>> upperCaseConsumer = list -> {
+        for(int i=0; i< list.size(); i++){
+            list.set(i, list.get(i).toUpperCase());
+        }
+    };
+    Consumer<List<String>> printConsumer = list -> list.stream().forEach(System.out::println);
+
+    upperCaseConsumer.andThen(printConsumer).accept(cities);
+}
+```
+
 
 ## Supplier
 
-下面是Supplier接口的定义，里面就只有一个get方法，用于返回指定类型T的数据。
+下面是Supplier接口的定义，里面就只有一个get方法，用于返回指定类型T的数据。用于延缓某些代码的执行。
 
 ```java
 package java.util.function;
@@ -104,8 +140,46 @@ public class Main {
 ```
 
 ## Predicate
+Predicate通常用于过滤一个java流里的对象，是一个boolean类型值的函数。
+```java
+@Test
+public void testPredicate(){
+    List<String> names = Arrays.asList("John", "Smith", "Samueal", "Catley", "Sie");
+    Predicate<String> nameStartsWithS = str -> str.startsWith("S");
+    names.stream().filter(nameStartsWithS).forEach(System.out::println);
+}
+```
 
+Predicate也提供一些默认的和静态的方法用于组合使用，比如下面的and、or
+
+```java
+default Predicate<T> and(Predicate<? super T> other);
+default Predicate<T> or(Predicate<? super T> other);
+static <T> Predicate<T> isEquals(Object targetRef);
+default Predicate<T> negate();
+```
+
+下面这个例子用一个and连接两个Predicate，表示与的意思，过滤的逻辑既要是S开头，也要长度大于等于5.
+```java
+@Test
+public void testPredicateAndComposition(){
+    List<String> names = Arrays.asList("John", "Smith", "Samueal", "Catley", "Sie");
+    Predicate<String> startPredicate = str -> str.startsWith("S");
+    Predicate<String> lengthPredicate = str -> str.length() >= 5;
+    names.stream().filter(startPredicate.and(lengthPredicate)).forEach(System.out::println);
+}
+```
 
 ## Function
 
-
+Function接口是一个通用的，接收一个参数然后产出一个结果，经常使用在Stream.map方法里。
+下面这个Function实现，接收字符串，输出字符串的长度。
+```java
+@Test
+public void testFunctions(){
+    List<String> names = Arrays.asList("Smith", "Gourav", "Heather", "John", "Catania");
+    Function<String, Integer> nameMappingFunction = String::length;
+    List<Integer> nameLength = names.stream().map(nameMappingFunction).collect(Collectors.toList());
+    System.out.println(nameLength);
+}
+```
