--- a/_posts/interviews/2023-03-14-Kafka.md
+++ b/_posts/interviews/2023-03-14-Kafka.md
@@ -12,6 +12,15 @@ tags:
 
 ---
 
+### 发布订阅模型
+发布订阅模型使用主题作为消息通信载体，类似于广播模式，发布者发布一条消息，该消息通过主题传递给所有的订阅者。
+
+- Topic：topic是生产者和消费者通信的载体，生产者将消息发送到特定的topic上，消费者通过订阅特定的topic来消费消息。
+- Partition：partition属于topic的一部分，一个topic可以有多个partition，并且同一topic下的partition可以分布在不同的broker上，
+也就是说一个topic可以横跨多个broker。
+- broker：broker可以看作是一个独立的kafka实例，多个kafka broker可以组成一个kafka 集群。
+
+
 ### 消息队列的重复消费、消息丢失、消息顺序等问题如何保证？
 
 ---
@@ -23,7 +32,8 @@ tags:
 ### Kafka如何保证消息的有序性
 
 - 一个topic只指定一个partition（不现实）
-- 发送消息的时候指定发到哪个partition和key
+- 首先在同一个partition中消息肯定是有序的，发送消息的时候指定发到哪个partition和key，kafka发送一条消息的时候，可以指定topic、partition、key、data四个参数。我们可以
+把同一key的消息都发送到同一个partition中。
 保证将同一个语义下消息放到同一个partition分区中，比如一个订单有支付、发货、评价三条消息，要将同一个订单的这三条消息发送到同一个分区中，保证有序性。
 具体做法可以用哈希取模。
 
@@ -36,7 +46,7 @@ tags:
 - 生产端丢失：调用send方法发送之后使用回调函数判断是否发送成功
 - 消费端丢失：关闭自动提交offset，只有真正消费了之后才提交offset值。但是会带来重复消费的问题
 - Kafka丢失：设置acks=all，只有全部副本都收到消息才表示发送成功，但是这样延迟会很高；设置replication.factor>=3,保证每个分区有至少3个副本，保证数据安全；
-min.insync.replica>=1,代表消费至少要被写入两个副本才表示发送成功。这个参数表示消息需要被写入多少个副本里，acks参数表示消息
+min.insync.replica>=1,代表消息至少要被写入两个副本才表示发送成功。这个参数表示消息需要被写入多少个副本里，acks参数表示消息
 
 ---
 
