--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -64,6 +64,8 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 ### InnoDB和MyISAM区别？
 
+MyISAM不支持行级锁和事务，而且崩溃后无法安全恢复。
+
 - InnoDB支持表的行级锁，MyISAM只支持表级锁，所以并发能力上InnoDB比MyISAM更优秀；
 - InnoDB支持事务，定义了四种隔离级别，MyISAM不支持事务。
 - MyISAM不支持外键，InnoDB支持
@@ -95,7 +97,8 @@ MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成
 
 - 脏读：一个事务对数据修改，但是还没有提交，这时另一个事务读到了未提交的数据，之后第一个事务又回滚了，导致第二个事务读到的数据是错误的。
 - 不可重复读（Un repeatable read）：一个事务修改数据，另一个事务同时读取两次数据，前后两次读取可能会因为第一个事务的修改导致读取结果不一致。
-- 幻读（Phantom read）：一个事务多次读取同一个数据时，由于另一个事务同步修改，导致多次读取的记录条数不一致，重点是读取的记录条数不一致，和不可重复读类似，不可重复读的重点是多次读取的记录的值不一致。想要解决幻读，重点是要防止一个事务在读取数据的时候另一个事务删除或新增数据，可以添加表锁+Next key lock
+- 幻读（Phantom read）：一个事务多次读取同一个数据时，由于另一个事务同步修改，导致多次读取的记录条数不一致，重点是读取的记录条数不一致，和不可重复读类似，不可重复读的重点是多次读取的记录的值不一致。
+想要解决幻读，重点是要防止一个事务在读取数据的时候另一个事务删除或新增数据，可以添加表锁+Next key lock
 
 InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防止幻读。
 
@@ -113,7 +116,8 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 ### 并发事务控制方式有哪些？
 
 - 锁： 写锁和读锁
-- MVCC：多版本并发控制，对一份数据存储多个版本，通过事务的可见性保证事务能看到自己应该看到的版本，通常会有一个全局的版本分配器来为每一行数据设置版本号，版本号是唯一的。
+- MVCC：多版本并发控制，对一份数据存储多个版本，通过事务的可见性保证事务能看到自己应该看到的版本，
+通常会有一个全局的版本分配器来为每一行数据设置版本号，版本号是唯一的。
 
 ---
 
@@ -122,6 +126,14 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 ---
 
 ### MySQL使用哪些锁？
+- 行锁
+- 表锁
+
+### InnoDB有几种行锁？
+- record lock（记录锁）：会锁定单个行
+- gap lock（间隙锁）：会锁定一个范围，不会锁定行记录本身
+- next-key lock（临键锁）：会锁定一个范围，也会锁定这个范围内的记录本身。主要是为了解决幻读问题，避免其他并发事务插入新记录。
+
 
 ---
 
