--- a/_posts/interviews/面经/2023-05-11-美团.md
+++ b/_posts/interviews/面经/2023-05-11-美团.md
@@ -92,3 +92,118 @@ G1收集器会在后台维护一个优先列表，每次根据允许的收集时
 ### LRU是什么？如何实现？
 
 LRU是最近最少使用策略，是一种缓存淘汰机制。
+
+### 什么是堆内存？参数如何设置？
+
+在java中，堆内存主要用于分配对象的存储空间。
+- Xmx，指定最大堆内存
+- Xms，指定堆内存空间的初始大小
+- Xss，设置每个线程栈的大小，
+
+### 栈和队列，举个使用场景例子？
+
+- 栈可以用于字符匹配、数据反转场景
+- 队列可以用于任务队列、共享打印机等场景
+
+### MySQL为什么InnoDB是默认引擎？
+
+
+### MySQL索引底层结构为什么使用B+树？
+可以支持范围查询和排序，叶子节点之间通过指针相互连接。
+
+### B+树的叶子节点链表是单向还是双向？
+双向链表
+
+### MVCC是什么？它的底层原理是什么？
+
+MVCC是多版本并发控制，通过读取历史版本的数据，来降低并发事务冲突，提高并发性能的一种机制。
+
+- 事务版本号
+- 表的隐藏列
+- undo log
+- read view
+
+### undo log具体怎么回滚事务？
+
+对于insert、delete、update类型的sql，会在undo log中记录修改之前的数据，当回滚的时候，反向执行修改的操作就可以。
+
+### 如何查询慢sql产生的原因？
+
+- 分析sql的执行计划，看有没有命中索引
+- 如果没有用到索引，可能就是索引设计，或者sql语句有问题。需要优化sql语句，或者重新加索引
+- 看看是不是查询出的数据量过大，是不是返回了不必要的行或列。
+
+### 索引失效的情况有哪些？
+
+- like已%开头，索引会失效
+- or语句前后没有同时索引，也会失效
+- 组合索引的时候，使用的不是第一列索引的时候，会失效
+- 数据类型出现隐式转换
+- 对索引字段使用了函数操作
+- 在索引列上使用is null或者is not null的时候
+- 在索引字段上使用not、<>、！=的时候会失效。
+
+### 一个redis实例最多能存放多少的keys？list、set、sorted set它们最多能存放多少元素？
+
+一般内存值有多少就可以存放多少？
+
+### redis数据结构？压缩列表和跳跃表的区别？
+
+
+### 为什么数据量小的时候用压缩列表？
+
+
+### redis主从同步是怎么实现的？
+
+redis主从刚刚建立连接的时候，会进行全量同步；全量同步结束后，进行增量同步。
+
+- 在全量同步的时候主服务器会开启一个后台进程用于将redis中的数据生成一个rdb文件，同时，会缓存所有写命令。rdb文件生成之后会发送给从服务器，从服务器根据rdb文件将数据加载到内存，同时主服务器缓存的写命令也会传给从服务器，
+然后从服务器将这些命令依次作用于自己本地的数据集上最终达到数据的一致性。
+
+- 在增量同步的时候，主服务器会在内存中给每个从服务器维护一份同步日志和同步标识。每个从服务器和主服务器同步时候都会携带自己的同步标识和上次同步的最后位置，根据这些标识，主服务器把之后的指令发送给从服务器，进行增量同步。
+
+### redis持久化rdb和aof优缺点？
+
+rdb是将redis某一时刻的数据持久化到磁盘中，是一种快照式的持久化方法。
+优点是：
+- 保存了某个时间点的数据，适合做数据备份；
+- rdb文件比较紧凑，方便传输
+- rdb过程是有子进程处理的，不会影响redis的性能。
+- 在恢复大数据集的时候，rdb比aof快一些。
+
+缺点是：
+- redis意外宕机的话，会丢失部分数据
+
+
+
+aof是将执行过的写指令记录下来，在数据恢复的时候从前到后再将指令都执行一边。
+
+优点是：
+- aof可以根据fsync策略方便持久化。比如每秒写入磁盘一次
+- aof文件是只进行追加的日志文件，不需要在写入时读取文件
+- redis可以在aof文件体积较大的时候，进行aof重写
+- 可读性高，容易分析
+
+缺点是：
+- aof文件量比rdb文件大
+
+
+### 谈谈自己对Spring AOP的了解？
+
+AOP是指面向切面编程，可以将一些业务模块共同调用的逻辑封装起来，比如事务处理、日志管理、权限控制这些。可以减少系统的重复代码，降低模块间的耦合度。
+
+### Spring Bean容器的生命周期是什么样的？
+
+首先会实例化bean对象-
+然后设置对象属性-
+检查bean有没有实现一些Aware接口，比如设置bean的name，设置bean的classLoader，设置bean的beanFactory，设置这些依赖-
+然后进行beanPostProcessor前置处理-
+检查bean有没有实现initializingBean接口，执行afterPropertiesSet()方法-
+检查是否有自定义的init方法-
+进行beanPostProcessor后置处理-
+当要销毁的时候，如果bean实现了DisposableBean接口，执行destroy()方法-
+最后调用自定义的destroy方法。
+
+> 实例化-属性赋值-初始化-销毁
+
+
