--- a/_posts/interviews/面经/2023-05-11-阿里.md
+++ b/_posts/interviews/面经/2023-05-11-阿里.md
@@ -8,3 +8,151 @@ tags:
   - Interview
   - 面经
 ---
+
+
+### 1. TCP和UDP区别？
+
+tcp是传输控制协议，udp是用户数据报协议。
+- 首先tcp是面向连接的协议，在发送方和接收方通信之前需要建立连接；
+- 保证数据顺序，保证数据正确性。接收方会以有序的方式接收数据包，tcp每接收到一个数据包时，接收方会向发送方
+发送一条确认，如果失败的话，会请求重新传输。
+- tcp不支持广播。
+udp是一种无连接协议，支持广播，通常速度也更快；不保证顺序；可能丢包
+
+tcp使用的地方有http，https，smtp，ftp；udp的话使用的有视频流，视频电话，ip语音服务等。
+
+### 2. TCP/IP协议设计那几层架构？
+
+应用层
+传输层
+网络层
+网络接口层
+
+### 3. 描述下TCP连接四次挥手的过程，为什么要四次挥手？
+
+- 第一次挥手：client端发起挥手请求，向server端发送fin报文，client进入FIN_WAIT_1状态。
+- 第二次挥手：server端收到FIN报文段后，向client端发送ACK报文，client端进入FIN_WAIT_2状态。
+- 第三次挥手：server端向client端发送FIN报文，表示server端可以关闭连接了，server端进入LAST_ACK状态
+- 第四次挥手：client收到server端的FIN报文段后，发送ACK报文，然后进入TIME_WAIT状态，关闭连接。client端等待2MSL时间后如果没有收到回复，表示server端正常关闭，client端也就可以关闭连接了。
+
+
+因为关闭连接的时候，当client短发出FIN报文时候，只是表示client端告诉server端数据已经发送完毕了。
+当server端收到fin报文并返回ack报文段，表示它已经直到client端没有数据发送了，但是server端还是有可能需要发送数据到client端的，所以server不会立即关闭socket，直到server端把数据也发送完毕了，
+server端才会发送fin报文段，这个时候表示server端也没有数据要发送了，可以关闭这次连接了。
+
+### 4. 计算机插上电源操作系统做了什么？
+
+- 给主板供电
+- 启动引导程序
+- 开机自检
+- 加载操作系统
+- 检查配置文件
+- 准备读取命令和数据
+
+### 5. linux操作系统设备文件有哪些？
+字符设备、块设备
+
+### 6. 多线程同步有哪些方法
+
+- 使用synchronized关键字
+- 使用wait和notify
+- 使用重入锁实现线程同步
+- 使用局部变量实现线程同步
+- 使用阻塞队列
+- 使用原子变量
+
+### 什么是可重入锁(ReentrantLock)？
+可重入锁表示线程可以进入它已经拥有的锁所同步着的代码块。
+
+### 9. 创建线程的三个方法是什么？
+
+- 通过继承Thread类创建线程类
+- 实现Runnable接口创建线程类
+- 通过Callable和Future接口创建线程
+
+### 10.java怎么获取多线程的返回值？
+
+- 主线程等待
+- 使用Thread的join阻塞当前线程等待
+- 实现Callable接口（通过FutureTask或线程池的Future）
+
+### 11. 线程池有哪几种创建方式？
+
+通过Executors提供了四种线程池，分别是：
+- newCachedThreadPool：创建一个可缓存线程池，如果有线程空闲，会回收空闲线程
+- newFixedThreadPool：创建一个定长线程池，超出的线程会在队列中等待
+- newScheduledThreadPool：创建一个定长线程池，支持定时及周期性任务执行
+- newSingleThreadExecutor：创建一个单线程的线程池，只会用唯一的一个工作线程执行任务，保证所有任务按照指定顺序执行。
+
+### 12.线程池参数有哪些？
+
+- corePoolSize:核心线程大小
+- maximumPoolSize：线程池最大线程数量
+- keepAliveTime:空闲线程存活时间
+- unit:空闲线程存活时间单位
+- workQueue：工作队列
+- threadFactory：线程工厂
+- handler：拒绝策略
+
+### 13.线程池拒绝策略有哪些？
+
+- AbortPolicy：丢弃任务并抛出RejectedExceutionException异常（默认拒绝策略）
+- DiscardPolicy：丢弃任务，但是不抛出异常。
+- DiscardOldestPolicy：丢弃队列最前面的任务，然后重新提交被拒绝的任务。
+- CallerRunsPolicy：由提交任务的线程处理该任务。
+
+### 14. 线程池的三个核心参数？
+
+- corePoolSize：核心线程数，定义了最小可以同时运行的线程数量
+- maximumPoolSize：当队列中存放的任务达到队列容量的时候，当前可以同时运行的线程数量变成最大线程数
+- workQueue：当新任务来的时候会先判断当前运行的线程数量是否达到核心线程数，如果达到的话，新任务就会被存放在队列中。
+
+### 16.给用户发消息任务超出队列，应该用哪个拒绝策略？有其他方法吗？
+
+应该用CallerRunsPolicy策略
+
+- 可以用无界队列（LinkedBlockingQueue），继续添加任务到阻塞队列中等待执行
+- 用消息队列存放任务数据，线程池慢慢处理
+
+### 17.Java8的新特性有哪些了解？
+
+- 接口的默认方法
+- Lambda表达式
+- 函数式接口（Supplier、Consumer、Predicate、Function）
+- Optional
+- Streams（流）
+- Date API
+- Annotations（注解）
+
+### 18. 什么时候用多线程、为什么要设计多线程？
+
+### 19.多线程越多效率越高吗？
+
+线程的生命周期开销非常高、线程会消耗过多的CPU资源
+
+### 20.多线程会产生哪些并发问题？
+
+会产生安全性问题：比如在单线程正常运行的代码，在多线程环境中就可能出现不正确的结果。
+第二个就是会产生活跃性问题：不正确的加锁、解锁方式可能会导致死锁或者活锁问题
+第三个就是会有性能问题：多线程并发会导致多个线程切换运行，线程切换就会有一定的消耗。
+
+
+### 22.虚拟内存是什么？虚拟内存的原理是什么？
+
+虚拟内存是计算机系统内存管理的一种技术。
+- 虚拟内存地址空间是连续的，没有碎片
+- 虚拟内存的最大空间就是cpu的最大寻址空间，不受内存大小的限制，能提供比内存更大的地址空间。
+
+### 23.栈会溢出吗？什么时候溢出？方法区会溢出吗？
+
+每个方法在执行的时候都会创建一个栈帧，用来存储局部变量表、操作数栈、动态链接、方法出口等信息。局部变量表又包含基本数据类型、对象引用类型。
+如果线程请求的栈深度大于虚拟机所允许的最大深度，将抛出StackOverflowError异常，一般是方法递归调用的时候会产生这种结果。
+
+
+### 24.JVM如何加载类的？
+jvm类加载机制包括五个部分：加载、验证、准备、解析、初始化。
+- 加载：在内存中生成一个代表该类的Class对象，作为方法区这个类的各种数据的访问入口。
+- 验证：确保class文件的字节流符合当前虚拟机的要求。
+- 准备：为类变量分配内存并设置初始值，使用的是方法区的内存
+- 解析：将常量池中的符号引用替换为直接引用。
+- 初始化：初始化阶段真正初始化静态变量和其他资源，开始执行类中代码。
