--- a/_posts/interviews/面经/2023-05-11-美团.md
+++ b/_posts/interviews/面经/2023-05-11-美团.md
@@ -116,7 +116,10 @@ LRU是最近最少使用策略，是一种缓存淘汰机制。
 
 ### MVCC是什么？它的底层原理是什么？
 
-MVCC是多版本并发控制，通过读取历史版本的数据，来降低并发事务冲突，提高并发性能的一种机制。
+MVCC是多版本并发控制，通过读取历史版本的数据，来降低并发事务冲突，提高并发性能的一种机制。用于实现读已提交和可重复读两种隔离级别。
+
+因为在mysql里有读写锁来解决多个事务同时执行时出现的并发一致性问题，但是读锁和写锁还是互斥的，加了写锁就不能在读了。
+所以在MVCC中，写操作更新最新的版本快照，读操作去读旧版本快照。这样的话，读锁和写锁就不会互斥关系。
 
 - 事务版本号
 - 表的隐藏列
