--- a/_posts/interviews/面经/2023/2023-05-12-百度.md
+++ b/_posts/interviews/面经/2023/2023-05-12-百度.md
@@ -9,7 +9,7 @@ tags:
   - 面经
 ---
   
-
+印象不好，优点不耐烦
 ### hadoop用到哪些？hadoop能存关系型数据库吗？
 hadoop是一个分布式的计算和存储框架。所以就是可以把数据分布式存储，计算也可以分布式计算随后汇总。
 核心部件包括分布式文件系统HDFS和MapReduce。
@@ -67,6 +67,7 @@ spark里面有很多函数，比如map、filter、union、join、groupByKey、pa
 ### K8s调用任务
 
 ### 为什么使用Kafka，可以直接用http调用吗？为什么要加一个Kafka？
+- 解耦：生产者和消费端不需要相互依赖
+- 削峰：打平高峰期的流量，消费端可以以自己的速度处理
+- 异步：生产者不需要等待消费端响应，直接返回，提高响应时间和吞吐量
 
-
-### 
