--- a/_posts/interviews/2023-03-14-Java.md
+++ b/_posts/interviews/2023-03-14-Java.md
@@ -40,16 +40,86 @@ tags:
 
 ---
 
+
+### java一次编译到处运行的原因？
+在不同平台有不同的JVM虚拟机，都可以载入和执行字节码文件
+
+### 字节码文件如何被jvm读取的？
+jvm会通过类加载机制把类的数据从字节码文件加载到内存，并对数据进行校验、转换解析和初始化，最后
+形成可以被虚拟机直接使用的java类型。
+加载的过程可以分为加载、验证、准备、解析、初始化、使用、最后卸载。
+- 加载阶段jvm会获取字节码文件，首先通过类的全限定名来获取该类的二进制字节流。然后将这个字节流
+所代表的静态结构转化成方法区的运行时数据结构。最后在内存中生成一个代表这个类的Class对象，作为方法区
+的这个类的各种数据的访问入口。
+- 验证阶段对字节流进行验证，确保符合java虚拟机规范，保证字节码格式正确。
+- 准备阶段为类变量(静态变量)分配内存和初始化值的过程，
+
+### 编译的字节码文件中的主要内容是什么？
+魔数 
+次版本号 
+主版本号 
+文件信息 
+常量池 
+方法表集合（对类内部的方法描述，在字节码中以表的集合形式表现）
+
+### jvm优化；
+
+
+### 如何排查oom
+一些常用的JVM配置参数
+- -Xmx(堆内存最大值) 4g  -Xms(堆内存初始值大小) 4g 设置堆内存
+- -XX：UseG1GC -XX：MaxGCPauseMIllis=50  指定GC算法
+- -XX：ParallelGCThreads=4 指定GC并行线程数
+- -XX：+PrintGCDetails -XX：PrintGCDateStamps   打印GC日志
+- -Xloggc:gc.log  指定GC日志文件
+- -XX：MaxMetaspaceSize=2g   指定Meta区的最大值
+- -Xss 1m  设置单个线程栈的大小
+- -XX：+HeapDumpOnOutOfMemoryError  -XX：HeapDumpPath=/usr/local/  指定堆内存溢出时自动进行Dump
+
+### jvm工具
+- jps：与linux上的ps类似，可以查看虚拟机的进程，可以查看本地运行着几个java程序，并显示他们的进程号。
+- jstat：监视jvm内存内的各种堆和非堆的大小及其内存使用量
+- jstack：堆栈跟踪工具，一般用于查看某个进程包含线程的情况
+- jmap：打印出某个java进程内存内的所有对象的情况。一般用于查看内存占用情况。生产堆转储文件
+- jinfo：可以输出并修改运行时的java进程的一些参数
+- jconsole：一个java GUI监视工具，可以以图表化的形式显示各种数据，并可通过远程连接监视远程的服务器的jvm进程。
+
+
+- top：查看当前所有进程的使用情况，cpu占用率、内存使用情况、服务器负载状态等参数
+- ps：
+### synchronized与lock区别
+
+
+### 三次握手与四次挥手
+
+
+### 外键的优缺点
+
+
+### 项目里建了哪些表？
+
+
 ### 字节码的注入技术有没有了解？
 
 ---
 
 ### java 多线程的同步机制
-
+- 同步方法
+- 同步代码块
+- volatile
+- 使用重入锁ReentrantLock同步
+- ThreadLocal类
 ---
 
 ### java 锁的实现原理
 
+java提供了两种方式来加锁:synchronized、ReentrantLock
+- synchronized修饰对象时：如果修饰的是对象，那么他是依赖于monitor对象-监视器锁来实现锁的机制的。
+每个对象都是一个监视器锁（monitor），当monitor被其他线程占用时就会处于锁定状态，线程执行monitorenter
+指令时尝试获取monitor的所有权。
+线程退出monitor的时候，执行monitorexit指令。
+> synchronized的实现原理：synchronized的语义底层是通过一个monitor对象来完成，其实wait/notify等方法也依赖于monitor对象。
+- synchronized修饰方法时：那么则是通过ACC_SYNCHRONIZED标识符来进行加锁的。
 ---
 
 
