--- a/_posts/interviews/2023-03-14-算法.md
+++ b/_posts/interviews/2023-03-14-算法.md
@@ -8,12 +8,20 @@ tags:
   - 算法
 ---
   
-# 排序
+### 快排原理？
+快排的基本思想是分治法，排序过程如下在输入数组中随机选取一个元素作为中间值pivot，然后对数组进行分区partition，使所有比中间值小的数据移到数组的左边，
+所有比中间值大的数据移到数组的右边。接下来对中间值左右两侧的子数组用相同的步骤排序，直到子数组中只有一个数字为止。
+### 快排，数组对于快排的影响？
+快排的时间复杂度取决于所选取的中间值在数组中的位置。如果每次选取的中间值在排序数组中都接近数组中间的位置，那么快速排序的时间复杂度是O(nlogn)。
+如果每次选取的中间值都位于排序数组的头部或尾部，那么快速排序的时间复杂度是O(n^2)。这也是随机选取中间值的原因，避免在某些情况下快速排序退化成时间复杂度为O(n^2)的算法。
 
+### Collections中采用的排序方式是哪一种？具体是怎么使用的？
+mergeSort和TimSort
 
----
-  
-# 链表
+### 归并排序的应用场景？空间复杂度？快排的空间复杂度是多少？
+归并时间复杂度O(nlogn),空间复杂度O(n)，需要辅助数组  
+快排平均时间复杂度O(nlogn)，最坏O(n^2)，空间复杂度平均O(logn),最坏O(n)
+
 
 ---
 
