--- a/_posts/interviews/2023-03-09-Network.md
+++ b/_posts/interviews/2023-03-09-Network.md
@@ -3,7 +3,8 @@ title: 计算机网络面试题
 author: Yu Mengchi
 date: '2023-03-09 19:02 +8'
 categories:
-  - Interview
+  - Interview 
+  - 面试知识点
 tags:
   - Interview
   - Network
