--- a/_posts/interviews/2023-03-09-Network.md
+++ b/_posts/interviews/2023-03-09-Network.md
@@ -16,8 +16,8 @@ tags:
 
 ### 介绍OSI和TCP/IP网络分层模型，以及每一层主要有哪些协议，以及每一层的主要功能是什么？
 
-OSI七层模型包括应用层、表示层、会话层、传输层、网络层、数据链路层和物理层。应用层的功能是为计算机用户提供服务；表示层提供数据处理功能（比如编解码、加密解密这些操作）；会话层负责管理应用程序之间的会话；传输层为两台主机进程之间的通信提供通用的数据传输服务；网络层主要是路由和寻址；数据链路层为帧编码以及提供误差纠正控制；物理层负责透明地传送比特流数据。
-TCP/IP模型主要有应用层、传输层、网络层和网络接口层。应用层主要提供两个终端设备上的应用程序之间信息交换的服务，在应用层交互的数据单元是报文，应用层协议有HTTP、FTP、SMTP、POP3协议；传输层主要负责为两台终端设备进程之间的通信提供通用的数据传输服务，传输层协议主要有TCP和UDP协议；网络层主要功能就是路由和寻址，负责为分组交换网上的不同主机提供通信服务，还有为传输层传下来的分组选择合适的路由，网络层协议主要有IP/IPv6协议、ARP、ICMP；网络接口层可以分为数据链路层和物理层，链路层的作用是将网络层交下来的IP数据报组装成帧，在两个相邻节点间的链路上传送帧，物理层的作用是实现相邻计算机节点间比特流的透明传输，尽可能屏蔽掉具体传输介质和物理设备的差异。
+- OSI七层模型包括应用层、表示层、会话层、传输层、网络层、数据链路层和物理层。应用层的功能是为计算机用户提供服务；表示层提供数据处理功能（比如编解码、加密解密这些操作）；会话层负责管理应用程序之间的会话；传输层为两台主机进程之间的通信提供通用的数据传输服务；网络层主要是路由和寻址；数据链路层为帧编码以及提供误差纠正控制；物理层负责透明地传送比特流数据。
+- TCP/IP模型主要有应用层、传输层、网络层和网络接口层。应用层主要提供两个终端设备上的应用程序之间信息交换的服务，在应用层交互的数据单元是报文，应用层协议有HTTP、FTP、SMTP、POP3协议；传输层主要负责为两台终端设备进程之间的通信提供通用的数据传输服务，传输层协议主要有TCP和UDP协议；网络层主要功能就是路由和寻址，负责为分组交换网上的不同主机提供通信服务，还有为传输层传下来的分组选择合适的路由，网络层协议主要有IP/IPv6协议、ARP、ICMP；网络接口层可以分为数据链路层和物理层，链路层的作用是将网络层交下来的IP数据报组装成帧，在两个相邻节点间的链路上传送帧，物理层的作用是实现相邻计算机节点间比特流的透明传输，尽可能屏蔽掉具体传输介质和物理设备的差异。
 
 ---
 
