--- a/_posts/interviews/面经/2023/2023-05-22-脉脉.md
+++ b/_posts/interviews/面经/2023/2023-05-22-脉脉.md
@@ -9,11 +9,19 @@ tags:
   - Redis
 ---
   
-### 元空间收jvm内存影响吗？
+### 元空间受jvm内存影响吗？
+方法区是规范
+永久代和元空间都是实现。
+在jdk1.8之前，方法区的实现是用永久代；在jdk1.8之后，方法区的实现是用元空间，并且不再使用虚拟机内存而是本地内存。
+
+
 
 
 ### thrift用的网络传输协议是什么？
-
+- TBinaryProtocal：
+- TCompactProtocal：
+- TJSONProtocal：
+- TSimpleJSONProtocal：
 
 ### mysql有哪些锁，间隙锁是什么？
 
