--- a/_posts/interviews/2023-03-14-Java.md
+++ b/_posts/interviews/2023-03-14-Java.md
@@ -129,7 +129,9 @@ java提供了两种方式来加锁:synchronized、ReentrantLock
 指令时尝试获取monitor的所有权。
 线程退出monitor的时候，执行monitorexit指令。
 > synchronized的实现原理：synchronized的语义底层是通过一个monitor对象来完成，其实wait/notify等方法也依赖于monitor对象。
+
 - synchronized修饰方法时：那么则是通过ACC_SYNCHRONIZED标识符来进行加锁的。
+
 ---
 
 ### gc算法有哪些？
@@ -165,4 +167,11 @@ java提供了两种方式来加锁:synchronized、ReentrantLock
 
 
 ### HashMap底层原理？
+
+底层是Entry类型的数组+链表和红黑树来实现的。会使用拉链法解决哈希冲突。同一个链表中存放哈希值和散列桶取模运算结果相同的Entry。
+
+### HashMap的loadFactor值为什么是0.75?
+
+loadFactor值表示哈希表中存储元素的数量与哈希表大小的比率。当哈希表中存储的元素数量超过了负载因子乘以哈希表大小的阈值时，哈希表就需要进行扩容了。
+
 
