--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -125,6 +125,12 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 
 ### MVCC在InnoDB中是如何实现的？
 
+在MVCC中，每个事务在读取数据时会看到一个独立的快照版本，而不是看到其他并发事务正在修改的版本。
+这个快照版本是通过在每个数据行上添加隐藏的版本号来实现的。
+当一个事务开始时，它会记录当前时间戳，然后只能看到所有版本号早于该时间戳的数据行。
+这样，事务可以读取一致性的数据，同时不会被其他并发事务的修改所干扰。
+
+
 ---
 
 ### MySQL使用哪些锁？
@@ -135,8 +141,6 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 - record lock（记录锁）：会锁定单个行
 - gap lock（间隙锁）：会锁定一个范围，不会锁定行记录本身
 - next-key lock（临键锁）：会锁定一个范围，也会锁定这个范围内的记录本身。主要是为了解决幻读问题，避免其他并发事务插入新记录。
-
-
 ---
 
 ### InnoDB存储引擎底层使用的数据结构是什么？B+树有什么特点？为什么使用B+树？
@@ -144,6 +148,8 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 ---
 
 ### 什么是聚簇索引？
+
+聚簇索引将数据存储在索引中，而不是独立的数据页中。可以提高查询效率
 
 ---
 
@@ -175,17 +181,17 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 - 以%开头的like查询
 - 使用or的时候，如果有一个字段没有索引，会导致其他字段的索引失效
 - 发生隐式转换（操作符两边类型不一样，比如一定要用双引号表明是字符串：where name="lijia"）
-
 ---
 
-### 查看索引使用情况？
+### 慢查询sql应该如何排查？如何优化？
+1. 确认慢查询的原因：确认是哪些sql语句导致了慢查询，可以使用mysql的慢查询日志（slow query log）来查看；
+2. 分析查询执行计划：使用explain命令来分析查询执行计划（会给出查询类型、表的连接方式、使用的索引信息），
+确定查询语句的优化方向
+3. 优化查询语句：通过优化查询语句（比如添加索引、使用合适的查询语句等）来提高查询性能
+4. 调整mysql参数：可以通过调整mysql的参数（如缓存大小、连接数（mysql使用连接池））来提高查询性能
+5. 拆分大查询：对于大查询语句，可以考虑拆分成多个小查询语句（分页查询、分区查询、并行查询），以减少查询负载
+6. 使用缓存：使用缓存避免重复查询，提高查询性能
 
-
----
-
-### sql执行缓慢应该如何解决？如何调优？导致慢查询的原因？
-
-- 索引失效
 
 
 ---
@@ -194,7 +200,12 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 ### sql使用应该注意哪些事项？
 
 
----
+### mysql部署方式有哪些？
+1. 单机部署：
+2. 主从部署
+3. 分布式部署
+4. 集群部署
+5. 云部署
 
 ### 如何使用读写分离(解决读高并发)和分库分表(解决存储压力)提高查询性能
 
