--- a/_posts/interviews/面经/2023/2023-05-26-完美世界.md
+++ b/_posts/interviews/面经/2023/2023-05-26-完美世界.md
@@ -103,40 +103,137 @@ class MyController @Inject()(myBean: MyBean, cc: ControllerComponents) extends A
 
 
 ### redis淘汰策略
-
+1. volatile LRU
+2. volatile TTL
+3. volatile Random
+4. allKeys LRU
+5. allKeys Random
+6. no evictions
 
 ### 闭包
+scala中的闭包是指一个函数可以访问其定义范围之外的变量或值的行为。
+```scala
+def add(a: Int): Int => Int = {
+  (b: Int) => a + b
+}
+
+val addTwo = add(2)
+println(addTwo(3))
+
+```
 
 
 ### 索引下推
-
+索引下推是一种查询优化技术。把过滤和排序操作放在数据库引擎中的存储引擎层级来执行，而不是在查询过程中将整个数据集传输到查询引擎层级来处理。
+可以减少数据传输和处理的时间，提高查询性能。
 
 ### 一致性哈希算法
+redis使用一致性哈希将数据分布在多个实例上，实现负载均衡、分布式缓存。
+
+一致性哈希算法是一种用于分布式系统中对数据进行分片的算法，基本思想就是将所有的数据和节点通过哈希函数映射到
+一个环上，环上的每个位置对应着一个哈希值。当有新的节点加入或节点宕机时，只需要在环上移动一些位置，就能实现
+数据的迁移，从而保证每台服务器上存储的数据量尽量均衡。
+
+### 代码风格？有多层if嵌套怎么解决？
+好的代码风格应该：
+1. 模块化：确保每个模块（函数、类）都只负载一件事，减少耦合性和复杂度，便于测试和维护
+2. 错误处理：确保函数能够接受任何数据类型和参数，有异常要及时处理。
+
+有多层if嵌套的时候应该：
+1. 抽象代码：如果if内的条件很复杂，应该抽象为方法，在if内直接调用方法，提高代码复用性。
+2. 提前返回：提前将不合理的情况，先返回。避免后面代码层层嵌套
 
 
-### 代码风格？嵌套怎么解决？
+### Play框架中使用Hibernate访问数据库表的方法
+1. 在build.sbt文件中添加依赖hibernate-core
+2. 在application.conf中配置db.default.url, db.default.driver, db.default.user和db.default.password
+3. 创建PersistenceConfig， 创建User实体类
+4. 创建UserRepository类，执行CRUD方法。
+5. 最后在Controller中可以使用UserRepository类执行CRUD操作
 
-### 用哪些设计模式
+### 用到哪些设计模式
+1. 单例模式：保证一个类只有一个实例，并提供全局访问点
+2. 工厂模式：定义一个接口，让子类决定实例化那个类。工厂类负责创建对象，而创建的对象具有公共接口
+3. 观察者模式：定义了一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖它的对象都会自动更新
+4. 装饰器模式：动态地给一个对象添加一些额外的职责，而不需要修改这个对象的类。
+5. 适配器模式：将一个类的接口转换成客户希望的另一个接口
+6. 策略模式：定义了一系列的算法，将每一个算法封装起来并可以相互替换使用，使得算法可以独立于使用它的客户而改变
+7. 模板方法模式：定义一个算法的骨架，将一些步骤延迟到子类中实现，使得子类可以不改变算法的结构即可重定义该算法的某些特定步骤。
+8. 组合模式：
+9. 迭代器模式：提供一种方法顺序访问一个聚合对象中各个元素，而又不暴露该对象的内部表示
+10. 命令模式：
 
 ### 联合索引是怎么查找的？
+查找元素时，会先比较第一个列的值，如果相同则再比较第二个列的值。
 
+### redis为什么快？
 
-### redis 模型？
+1. 数据存放在内存中，读写速度快
+2. 内置的高效的数据结构：比如字符串、哈希表、列表、集合等
+3. 单线程架构：redis使用单线程模型，避免了线程切换和锁竞争等多线程带来的开销和风险
+4. 异步IO：redis使用异步IO模型，利用操作系统底层的epoll、kqueue等事件管理机制，保证了高并发下的高效访问
+5. 轻量级：redis代码量非常少，功能简单。
+
+### redis为什么单线程模型都很快？
+
+redis采用单线程模型的主要原因是为了避免多线程并发带来的线程切换开销，并且将所有的数据存储在内存中，避免了
+磁盘IO带来的延迟。而且，redis内部使用了多路复用技术，可以在单线程下处理多个并发连接，从而提高了吞吐量。
 
 ### redis SDS相比C快在哪？
+1. SDS有字符串长度字段，能够快速获取字符串长度。
+2. SDS能够自动扩展空间来保存字符串，减少了缓存区溢出的情况。
+3. SDS做了很多内存预分配和内存重用的优化，因此在对字符串进行频繁修改的场景下，SDS的性能比传统字符串更好。
+4. 二进制安全，SDS对字符串的操作不依赖于空字符，支持保存任何二进制数据，因此更加灵活。
 
+> 传统字符串使用空字符作为字符串的结尾标志，因此不能保存包含空字符在内的二进制数据。
+> 而SDS使用字符串长度来标记字符串的结束，因此可以保存任何二进制数据。
 
 ### mysql有哪些锁？
+行锁
+表锁
+共享锁
+排他锁
+间隙锁
 
-### MVCC事务可见
+### MVCC如何保证事务可见
+MVCC为每个事务创建一个快照来解决多个事务同时访问数据库带来的数据不一致性和读写冲突。
+事务开始时，会获得一个当前快照的视图，该视图显示了在该事务开始之前对数据库进行的所有更改。
+然后，当该事务对数据库进行更改时，这些更改将在快照中创建一个新版本的数据。其他事务将继续使用它们开始时获得的视图，
+即使在更改进行时，它们也不会看到新版本的数据，这样，每个事务都可以在自己的版本中查看数据，并且不会相互干扰，从而确保事务的可见性。
+
 
 ### 乐观锁
+乐观锁是一种并发控制技术，在乐观锁情况下，每个事务在读取共享资源之前，不会对资源进行上锁，而是检查资源的当前状态，
+比如使用版本号或时间戳机制来跟踪资源的状态，以确保它没有被其他事务更改。如果检查发现资源已经被更新，则事务会回滚并
+重试操作。
 
+乐观锁可以提高系统的并发性和吞吐量。
 
 ### lru怎么实现的？
+lru是指最近最少使用算法，是一种常用的缓存淘汰算法。
 
+实现LRU算法的一种常见方式是使用双向链表和哈希表结合的方式。使用双向链表维护缓存中的所有数据，按照访问时间顺序排序，
+头部为最近访问的数据，尾部为最久未被访问的数据，通过哈希表记录每个数据在链表中的位置以及对应的key-value。
+当需要访问缓存中的某个数据时，可以先在哈希表中查找对应的节点位置，然后将该节点移动到链表头部，以表示最近访问过该节点。
+当缓存容量达到上限时，可以将尾部的节点淘汰掉，以释放缓存空间。
 
 ### var val 类型检测在哪里？
+scala是类型无关的语言，支持面向对象编程和函数式编程。
 
+scala的类型检查是在编译时进行的，使用静态和动态类型检查的组合。scala的类型系统基于一种称为""类型推断"的概念，允许程序员
+省略显示类型注释，编译器将根据使用值的上下文自动推断类型。
 
-### 
+- 静态类型检查：在编译时检查变量的数据类型，java、scala、C语言，需要生命变量的类型
+- 动态类型检查：在运行时确定变量的类型，python、ruby语言。
+
+### 确保多实例服务内的所有调度服务能在规定时间间隔内执行
+
+可以使用kubernetes CronJob来实现每10分钟执行一次的定时任务。 可以在kubernetes上部署一个CronJob对象，它会自动在
+每个指定的时间点启动一个Job对象，Job对象会执行你的task1任务。
+
+创建CronJob的具体步骤如下：
+1. 创建一个CronJob YAML文件
+描述调度规则、Job模板、运行容器对象、运行命令
+2. 在kubernetes集群上使用kubectl命令行工具创建CronJob
+kubectl apply -f cronjob.yml
+执行后，kubernetes会将CronJob对象
